--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -1,44 +1,73 @@
-<!-- tags- head, title, body, p,h1,h2,h3,..,h6, i,u,b,/br,center,ul,ol,li
-atributes- style="background-color:<>; color:<>;" ,link rel="icon" href="", a href="", img src=""-->
 
 <html>
 
+
 <head>
-<title> UID - First Lecture</title>
+<title> About Me| Roshni Venkatesan</title>
 <LINK rel="icon" href="C:\Users\DELL\Pictures\favicon.jpg">
+<style>
+div {   
+  padding-left: 75px;  
+}  
+</style>
 </head>
 
-<body background-image:url("https://images.search.yahoo.com/images/view;_ylt=Awrjbp2cxXFjY7YwVC2JzbkF;_ylu=c2VjA3NyBHNsawNpbWcEb2lkA2ZkYTVhNDNjMWYyYmU1MzBlNTQwMjVmNjBlNzljODQ1BGdwb3MDNARpdANiaW5n?back=https%3A%2F%2Fimages.search.yahoo.com%2Fsearch%2Fimages%3Fp%3Damrita%2Buniversity%2Blogo%2Bimage%26type%3DE211US1274G91639%26fr%3Dmcafee%26fr2%3Dpiv-web%26tab%3Dorganic%26ri%3D4&w=999&h=248&imgurl=ieomsociety.org%2Findia2021%2Fwp-content%2Fuploads%2F2021%2F01%2FLogo_AMRITA-2.png&rurl=http%3A%2F%2Fieomsociety.org%2Findia2021%2Fsponsors%2F&size=83.7KB&p=amrita+university+logo+image&oid=fda5a43c1f2be530e54025f60e79c845&fr2=piv-web&fr=mcafee&tt=Sponsors+%7C+India+2021&b=0&ni=21&no=4&ts=&tab=organic&sigr=H5910yOhB0O4&sigb=aLJE1F8EBweq&sigi=1rQnlchyPvws&sigt=uR4_k0iIzm5O&.crumb=83nvZscle/K&fr=mcafee&fr2=piv-web&type=E211US1274G91639"); 
-background-repeat:no-repeat;
- background-size:cover; >
+
+<body style="background-color:sky; color:brown">
+<!-- About Myself-->
+<h1 style="color:Black"><center><b>Roshni Venkatesan</b></center></h1>
+<div>
+<h3><I><U><left>| Sophomore in Cyber Security</left></U></i></h3>
+<h3><I><U><left>| Vice-President in WiCyS Amrita Student Chapter</left></U></i></h3>
+<h3><I><U><left>| Content Writer at CyberReach</left></U></i></h3>
+<h3><I><U><left>| Member at Kerala Blockchain Academy</left></U></i></h3>
+</div>
+</br>
+</br>
+<h3 style="text-align:center;">
+<i>BE KIND AND FIERCE...
+TREAT PEOPLE BETTER...
+STAY HYDRATED</i></BR></BR>
+</h3>
 
 
-<h1 style="color:#E0115F"><center><i><b>ANOKHA TECHFEST 2k23 </h1>
-<pre><h4 style="color:#E0115F;" style="text_align:right>-"A collaboration of minds showcasing wonders of modern tools"</h4>
-<h2 style="text-align:right">      REGISTER</BR>
-<i>>92 Days To Go...
-</i></BR>
-<i></h2>
-
-<h3><I><U><pre>|Seminars
-|Workshops
-|Tech Talks
-|Paper Presentation
-|Poster Presentation
-|Hackathons and Ideathons
-</pre></U></i></h3>
-
+<h2>How would I be Described as a Person? </h2>
+<i><ul>
+ <li>Active and Participative</br>
+ <Li>Vocal and Leadership oriented</br>
+ <li>Organised and Multitasking</br>
+ <li>Easy-going and open minded</br>
+ <Li>Hard working and professional</br>
+ </i></ul>
+<h2>How I would describe me as a Person? </h2>
+<I>
 <UL>
-<LI>I don't know about lot of things.<br/></LI>
+<LI>I don't know about lot of things.</LI>
 <LI>But I do love to know and learn lot of stuff.</LI>
 <LI>I'm a organisation freak, still perfecting the art.</LI>
 <LI>My jam are atheletics, writing, reading and coordination.</LI>
 
 </UL>
-</i>
+</I>
 
 
-<CENTER><img src="C:\Users\DELL\Pictures\image.jpg" width="300" height="220px"></CENTER>
-<a href="https://www.linkedin.com/in/roshni-venkatesan-bb8670213/">LinkedIn</a></br>
+<h2> Fun Facts About Me</h2>
+<I>
+<UL>
+<LI>I have a cat named Biscuit.</LI>
+<LI>Sarcasm is my love language.</LI>
+<LI>I sleep with a stuffed animal Guzmeen owl.</LI>
+<li>I have no idea how I manage to do half the things I do</li>
+
+</UL>
+</I>
+</BR
+</BR>
+</BR>
+<h3 style="text-align:center;">NOW ON TO THE REAL STUFF, IF YOU WANT TO GIVE ME A JOB ^_^</H3>
+<a href="C:\Users\DELL\Documents\UI Design\personal_website\html\AboutMe.html">Click Here</right></a></br>
+
+<CENTER><img src="C:\Users\DELL\Documents\UI Design\personal_website\images\Bg_personal.jfif" width="200" height="150px"></CENTER>
+
 </body>
 </html>
