--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -65,9 +65,9 @@ STAY HYDRATED</i></BR></BR>
 </BR>
 </BR>
 <h3 style="text-align:center;">NOW ON TO THE REAL STUFF, IF YOU WANT TO GIVE ME A JOB ^_^</H3>
-<a href="C:\Users\DELL\Documents\UI Design\personal_website\html\AboutMe.html">Click Here</right></a></br>
+<a href="html\AboutMe.html">Click Here</right></a></br>
 
-<CENTER><img src="C:\Users\DELL\Documents\UI Design\personal_website\images\Bg_personal.jfif" width="200" height="150px"></CENTER>
+<CENTER><img src="images\Bg_personal.jfif" width="200" height="150px"></CENTER>
 
 </body>
 </html>
