--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -4,7 +4,7 @@
 
 <head>
 <title> About Me| Roshni Venkatesan</title>
-<LINK rel="icon" href="C:\Users\DELL\Pictures\favicon.jpg">
+<LINK rel="icon" href="favicon.jpg">
 <style>
 div {   
   padding-left: 75px;  
