--- a/anokha/index.html
+++ b/anokha/index.html
@@ -5,7 +5,7 @@ atributes- style="background-color:<>; color:<>;" ,link rel="icon" href="", a hr
 
 <head>
 <title> UID - First Lecture</title>
-<LINK rel="icon" href="C:\Users\DELL\Pictures\favicon.jpg">
+<LINK rel="icon" href="images\favicon.jpg">
 </head>
 
 <body background-image:url("https://images.search.yahoo.com/images/view;_ylt=Awrjbp2cxXFjY7YwVC2JzbkF;_ylu=c2VjA3NyBHNsawNpbWcEb2lkA2ZkYTVhNDNjMWYyYmU1MzBlNTQwMjVmNjBlNzljODQ1BGdwb3MDNARpdANiaW5n?back=https%3A%2F%2Fimages.search.yahoo.com%2Fsearch%2Fimages%3Fp%3Damrita%2Buniversity%2Blogo%2Bimage%26type%3DE211US1274G91639%26fr%3Dmcafee%26fr2%3Dpiv-web%26tab%3Dorganic%26ri%3D4&w=999&h=248&imgurl=ieomsociety.org%2Findia2021%2Fwp-content%2Fuploads%2F2021%2F01%2FLogo_AMRITA-2.png&rurl=http%3A%2F%2Fieomsociety.org%2Findia2021%2Fsponsors%2F&size=83.7KB&p=amrita+university+logo+image&oid=fda5a43c1f2be530e54025f60e79c845&fr2=piv-web&fr=mcafee&tt=Sponsors+%7C+India+2021&b=0&ni=21&no=4&ts=&tab=organic&sigr=H5910yOhB0O4&sigb=aLJE1F8EBweq&sigi=1rQnlchyPvws&sigt=uR4_k0iIzm5O&.crumb=83nvZscle/K&fr=mcafee&fr2=piv-web&type=E211US1274G91639"); 
@@ -36,7 +36,7 @@ background-repeat:no-repeat;
 </i>
 
 
-<CENTER><img src="C:\Users\DELL\Pictures\image.jpg" width="300" height="220px"></CENTER>
+<CENTER><img src="images\image.jpg" width="300" height="220px"></CENTER>
 <a href="https://www.linkedin.com/in/roshni-venkatesan-bb8670213/">LinkedIn</a></br>
 </body>
 </html>
