--- a/anokha/index.html
+++ b/anokha/index.html
@@ -27,10 +27,10 @@ background-repeat:no-repeat;
 <i></h2>
 
 <UL>
-<LI>I don't know about lot of things.<br/></LI>
-<LI>But I do love to know and learn lot of stuff.</LI>
-<LI>I'm a organisation freak, still perfecting the art.</LI>
-<LI>My jam are atheletics, writing, reading and coordination.</LI>
+<LI>April 23 to April 26<br/></LI>
+<LI>Timings: 9:00am to 7:30pm </LI>
+<LI>Venue: Amritheswari Hall</LI>
+ <LI>Dress Code: Maroon</LI>
 
 </UL>
 </i>
