--- a/anokha/html/Anokha_2k23.html
+++ b/anokha/html/Anokha_2k23.html
@@ -5,33 +5,150 @@ atributes- style="background-color:<>; color:<>;" ,link rel="icon" href="", a hr
 
 <head>
 <title> Anokha TechFest 2k23</title>
-<LINK rel="icon" href="C:\Users\DELL\Documents\UI Design\HTML\amrita favicon].jfif">
+<!--<LINK rel="stylesheet" href="style.css">-->
 </head>
 
-<body  background-image: url('"C:\Users\DELL\Documents\UI Design\HTML\th.jfif"'); color:black">
-<!-- About Myself-->
-<h1 style="color:grey"><center><i><b>Roshni Venkatesan</b></i></center></h1>
-<h3><I><U><pre>|Sophomore in Cyber Security 
-|Vice-President in WiCyS Amrita Student Chapter
-|Content Writer in Cyber Reach
-|Member in B-RIG and Kerala Blockchain Academy </pre></U></i></h3>
-<h2 style="text-align:center;">IDEALS:</h2>
-<i>BE KIND AND FIERCE...
-TREAT PEOPLE BETTER...
-STAY HYDRATED</i></BR></BR>
-<i>
+<style>
+*{
+	margin: 0;
+    padding: 0;
+}
+header{
+	min-height: 10vh;
+	width: 100%;
+	background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/Backgroud.jfif)
+	;
+	background-position: center;
+	background-size: cover;
+	position: relative;
+}
+nav{
+	display: flex;
+	padding: 2% 6%;
+	justify-content: space-between;
+	align-items: center;
+}
+nav img{
+	width: 150px;
+}
+nav-links{
+	FLEX: 1;
+	txt-align: right;
+}
+nav-links ul li{
+	list-style: none;
+	display: inline_block;
+	padding: 8px 12px;
+	position: relative;
+}	
+nav-links ul li a{
+	color: #fff;
+	text-decoration: none;
+	font-size: 13px;
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+ 
+html,
 
+ 
+.container {
+  color: #333;
+  margin: 0 auto;
+  text-align: center;
+}
+ 
+
+ 
+li {
+  display: inline-block;
+  font-size: 1.0em;
+  list-style-type: none;
+  padding: 1em;
+
+}
+ 
+li span {
+  display: block;
+  font-size: 4.5rem;
+}
+ 
+.message {
+  font-size: 4rem;
+}
+ 
+#content {
+  display: none;
+  padding: 1rem;
+}
+ 
+
+
+}
+ 
+
+	
+</style>
+<body>
+<section class="header">
+	<nav>
+	<a href="index.html"><img src="images\amrita.jfif"></a>
+	<div class="nav-links">
+	<ul>
+	<li><a href="">HOME</a></li>
+	<li><a href="html\Anokha_SignUpForm.html">REGISTER</a></li>
+	<li><a href="">EVENTS</a></li>
+	<li><a href="">LOGIN</a></li>
+	<li><a href="">CONTACTS</a></li>
+	</nav>
+
+
+
+
+<div class="text-box">
+<h1 style="color:black"><center><i><b>ANOKHA 2K23-Time Turners Meet</b></i></center></h1><br/><br/><br/>
+<h3><I><U><pre>|Tech Wars- Drone and Robo Matches<br/>
+|30+ workshops by premier companies and research agencies<br/>
+|Top 10,000 Engineering students from all around India<br/>
+|3 Nights Of EDM music from the finest percussionists </br></br><br/></pre></U></i></h3>
+
+
+<div class="container">
+  <h2 id="headline">TIME LEFT:</h3>
+  <div id="countdown">
+    <ul>
+      <li><span id="days"></span>days</li>
+      <li><span id="hours"></span>Hours</li>
+      <li><span id="minutes"></span>Minutes</li>
+      <li><span id="seconds"></span>Seconds</li>
+    </ul>
+  </div>
+<i><strong>Organized by :</strong> School of Engineering, Amrita Vishwa Vidyapeetham<br/>
+
+<strong>Campus :</strong> Coimbatore<br/>
+
+<strong>Venue :</strong> Coimbatore</i></BR></BR>
+</h2><i>
+<h4>
 <UL>
-<LI>I don't know about lot of things.<br/></LI>
-<LI>But I do love to know and learn lot of stuff.</LI>
-<LI>I'm a organisation freak, still perfecting the art.</LI>
-<LI>My jam are atheletics, writing, reading and coordination.</LI>
+<LI>Starts On : 26 Mar 2023 9:00 am</br></LI>
+<LI>Ends On : 28 Mar 2023 5:00 pm</br></LI>
 
+<LI>Contact Us:<ul> <li>Acommodation and Hospitality</li>
+<li> Food And Beverage</li>
+<li> Other</li></ul></br></LI>
+</h4>
 </UL>
 </i>
+</div>
+
+</section>
 
 
-<CENTER><img src="C:\Users\DELL\Pictures\image.jpg" width="300" height="220px"></CENTER>
+
 <a href="https://www.linkedin.com/in/roshni-venkatesan-bb8670213/">LinkedIn</a></br>
 </body>
 </html>
