--- a/anokha/html/signup_form.htm
+++ b/anokha/html/signup_form.htm
@@ -3,6 +3,16 @@
 <title> ANOKHA 2K23 Registration Form</title>  
  
 </head>
+<script>
+function NameCheck() {
+    var x = document.getElementById("fname").value;
+    var y = x.split("")
+    let sp = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '!', '"', '#', '$', '%', '&', "'", '(', ')', '*', '+', ',', '-', '.', '/', ':', ';', '<', '=', '>', '?', '@', '[', '\\', ']', '^', '_', '`', '{', '|', '}', '~'];
+    var arrLen = sp.length;
+    for (var i = 0; i < arrLen; i++) {
+        if (y.includes(sp[i])) {
+            alert("Speacial charater present in Fisrt Name please remove it")
+</script>
 <body>
 <style>
  input[type=text], input[type=password] {
@@ -181,7 +191,7 @@ hr {
 
       <div class="clearfix">
         
-        <button type="submit" class="signup">Sign Up</button>
+        <button type="submit" class="signup" onclick=NameCheck()>Sign Up</button>
       </div>
     </div>
   </form>
