file name of form correction

--- a/anokha/html/Anokha_2k23.html
+++ b/anokha/html/Anokha_2k23.html
@@ -99,7 +99,7 @@ li span {
 	<div class="nav-links">
 	<ul>
 	<li><a href="">HOME</a></li>
-	<li><a href="html\Anokha_SignUpForm.html">REGISTER</a></li>
+	<li><a href="html\signup_form.html">REGISTER</a></li>
 	<li><a href="">EVENTS</a></li>
 	<li><a href="">LOGIN</a></li>
 	<li><a href="">CONTACTS</a></li>
