updated home page code

--- a/anokha/index.html
+++ b/anokha/index.html
@@ -4,39 +4,106 @@ atributes- style="background-color:<>; color:<>;" ,link rel="icon" href="", a hr
 <html>
 
 <head>
-<title> UID - First Lecture</title>
-<LINK rel="icon" href="images\favicon.jpg">
+<title> Anokha TechFest 2k23</title>
+<LINK rel="stylesheet" href="style.css">
+
+  <link rel="icon" type="image/x-icon" href="..\images\amrita favicon].jfif">
+<style>
+body {
+  background-image:url("../images/Backgroud.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background-size: 100% 100%;
+}
+</style>
 </head>
 
-<body background-image:url("https://images.search.yahoo.com/images/view;_ylt=Awrjbp2cxXFjY7YwVC2JzbkF;_ylu=c2VjA3NyBHNsawNpbWcEb2lkA2ZkYTVhNDNjMWYyYmU1MzBlNTQwMjVmNjBlNzljODQ1BGdwb3MDNARpdANiaW5n?back=https%3A%2F%2Fimages.search.yahoo.com%2Fsearch%2Fimages%3Fp%3Damrita%2Buniversity%2Blogo%2Bimage%26type%3DE211US1274G91639%26fr%3Dmcafee%26fr2%3Dpiv-web%26tab%3Dorganic%26ri%3D4&w=999&h=248&imgurl=ieomsociety.org%2Findia2021%2Fwp-content%2Fuploads%2F2021%2F01%2FLogo_AMRITA-2.png&rurl=http%3A%2F%2Fieomsociety.org%2Findia2021%2Fsponsors%2F&size=83.7KB&p=amrita+university+logo+image&oid=fda5a43c1f2be530e54025f60e79c845&fr2=piv-web&fr=mcafee&tt=Sponsors+%7C+India+2021&b=0&ni=21&no=4&ts=&tab=organic&sigr=H5910yOhB0O4&sigb=aLJE1F8EBweq&sigi=1rQnlchyPvws&sigt=uR4_k0iIzm5O&.crumb=83nvZscle/K&fr=mcafee&fr2=piv-web&type=E211US1274G91639"); 
-background-repeat:no-repeat;
- background-size:cover; >
+
+<body>
+<section class="header">
+	<nav>
+	<a href="index.html"><img src="..\images\amrita.jfif"></a>
+	
+	<div class="nav-links">
+	<ul>
+	<li><a href="..\html\Anokha_2k23.html">HOME</a></li>
+	<li><a href="..\html\Anokha_SignUpForm.html">REGISTER</a></li>
+	<li><a href="..\html\Events.html">EVENTS</a></li>
+	<li><a href="..\html\Login_page.html">LOGIN</a></li>
+	<li><a href="..\html\ContactUs_form.html">CONTACTS</a></li>
+	</nav>
 
 
-<h1 style="color:#E0115F"><center><i><b>ANOKHA TECHFEST 2k23 </h1>
-<h3><I><U><pre>|Seminars
-|Workshops
-|Tech Talks
-|Paper Presentation
-|Poster Presentation
-|Hackathons and Ideathons
-</pre></U></i></h3>
-<h2 style="text-align:right">      REGISTER</BR>
-<i>>92 Days To Go...
-</i></BR>
-<i></h2>
 
-<UL>
-<LI>April 23 to April 26<br/></LI>
-<LI>Timings: 9:00am to 7:30pm </LI>
-<LI>Venue: Amritheswari Hall</LI>
- <LI>Dress Code: Maroon</LI>
 
+<div class="text-box">
+<h1 style="color:red"><center><i><b>ANOKHA 2K23-DARE TO BE DIFFERENT</b></i></center></h1><br/><br/><br/>
+<h3 style="color:beige"><I><U><pre>|Tech Wars- Drone and Robo Matches<br/>
+|30+ workshops by premier companies and research agencies<br/>
+|Top 10,000 Engineering students from all around India<br/>
+|3 Nights Of EDM music from the finest percussionists </br></br><br/></pre></U></i></h3>
+
+
+<div class="container">
+  <h3 id="headline" style="color:red">TIME LEFT:</h3>
+  <div id="countdown">
+    <ul style="color:beige">
+      <li><span id="days"></span> 129 DAYS</li>
+      <li><span id="hours"></span>5 HOURS</li>
+      <li><span id="minutes"></span>45 MINUTES</li>
+    </ul>
+  </div></br></br>
+<i style="color:white"><strong style="color:red">Organized by :</strong> School of Engineering, Amrita Vishwa Vidyapeetham<br/>
+
+<strong style="color:red">Campus :</strong> Coimbatore<br/>
+
+<strong style="color:red">Venue :</strong> Coimbatore</i></BR></BR>
+</h2><i>
+<h4>
+<UL style="color:red">
+<LI><strong style="color:beige">Starts On :</strong> 26 Mar 2023 9:00 am</LI></br>
+<LI><strong style="color:beige">Ends On :</strong> 28 Mar 2023 5:00 pm</br></LI>
+</ul></br></LI>
+</h4>
 </UL>
 </i>
+</div>
+
+</section>
 
 
-<CENTER><img src="images\image.jpg" width="300" height="220px"></CENTER>
-<a href="https://www.linkedin.com/in/roshni-venkatesan-bb8670213/">LinkedIn</a></br>
+<style>
+
+
+
+
+
+.browser > h2, p {
+  margin: 4px;
+  font-size: 90%;
+}
+
+
+div.terms{
+    display:block;
+    position:absolute;
+    bottom:0;
+    right:0;
+    width:100%;
+    background:DarkSalmon;
+    border:1px solid #ddd;
+}
+</style>
+
+
+
+<footer>
+<div id="terms" class="terms">
+  <p>Author: Roshni Venkatesan<br>
+   &#xA9; All Rights Reserved 2022-2023<br>
+  <a href="mailto:hege@example.com">roshnivenkatesan04.com</a></p>
+  </div>
+</footer>
+
 </body>
 </html>
