--- a/anokha/index.html
+++ b/anokha/index.html
@@ -5,12 +5,12 @@ atributes- style="background-color:<>; color:<>;" ,link rel="icon" href="", a hr
 
 <head>
 <title> Anokha TechFest 2k23</title>
-<LINK rel="stylesheet" href="style.css">
+<LINK rel="stylesheet" href="css/style.css">
 
-  <link rel="icon" type="image/x-icon" href="..\images\amrita favicon].jfif">
+  <link rel="icon" type="image/x-icon" href="images\amrita favicon].jfif">
 <style>
 body {
-  background-image:url("../images/Backgroud.jpg");
+  background-image:url("images/Backgroud.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed; 
   background-size: 100% 100%;
@@ -22,7 +22,7 @@ body {
 <body>
 <section class="header">
 	<nav>
-	<a href="index.html"><img src="..\images\amrita.jfif"></a>
+	<a href="index.html"><img src="images\amrita.jfif"></a>
 	
 	<div class="nav-links">
 	<ul>
