--- a/anokha/html/Anokha_SignUpForm.html
+++ b/anokha/html/Anokha_SignUpForm.html
@@ -1,4 +1,6 @@
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 <head>
 <title> ANOKHA 2K23 Registration Form</title>
  
