--- a/anokha/html/Events.html
+++ b/anokha/html/Events.html
@@ -2,7 +2,8 @@
 atributes- style="background-color:<>; color:<>;" ,link rel="icon" href="", a href="", img src=""-->
 
 <html>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 <head>
 <title> Anokha TechFest 2k23</title>
 <LINK rel="stylesheet" href="style.css">
