--- a/anokha/html/Login_page.html
+++ b/anokha/html/Login_page.html
@@ -1,4 +1,6 @@
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 <head>
 <title> ANOKHA 2K23| Login Form</title>
  <LINK rel="stylesheet" href="style.css">
