--- a/anokha/html/contact.html
+++ b/anokha/html/contact.html
@@ -44,7 +44,7 @@
             <div class="form-row">
                 <div class="form-label"><b style="color:beige">Phone</div>
                 <div class="form-field">
-                    <input type="number" name="phone"/> </div>
+                    <input type="number" name="phone" onchange="validatePhoneno()/> </div>
             </div>
         
             <div class="form-row">
@@ -58,7 +58,7 @@
             <div class="form-row">
                 <div class="form-label"><b style="color:beige">Query/Suggestions</div>
                 <div class="form-field">
-                    <textarea name="message" rows="10" cols="50"></textarea>
+                    <textarea name="message" rows="10" cols="80"></textarea>
                 </div>
             </div>
   
@@ -83,11 +83,26 @@
 
 <footer>
 <div id="terms" class="terms">
-  <p>Author: Roshni Venkatesan<br>
-   &#xA9; All Rights Reserved 2022-2023<br>
-  <a href="mailto:hege@example.com">roshnivenkatesan04.com</a></p>
+	 <p>
+   Copyright &#xA9; 2022-2023. Anokha - <a href="roshnivenkatesan04.com">Roshni</a><br>
+   II year B.Tech CSE(CYS)</br>
+   Part of 20CYS202 - User Interface Design</br>
+   Amrita Vishwa Vidyapeetham, Coimbatore
+  </p>
   </div>
 </footer>
 </body>
 
 </html>
+
+<script>
+function validatePhoneno() {
+      let phone = document.getElementById("phone").value;
+      if(!(phone.length==10))
+{
+window.alert("Enter valid phoneno");
+document.getElementById("phone").focus()
+}
+}
+
+</script>
