--- a/anokha/html/event.html
+++ b/anokha/html/event.html
@@ -71,9 +71,12 @@
 
 <footer>
 	<div id="terms" class="terms">
-		<p>Author: Roshni Venkatesan<br>
-		&#xA9; All Rights Reserved 2022-2023<br>
-		<a href="mailto:hege@example.com">cb.en.u4cys21061@cb.en.amrita.edu</a></p>
+		 <p>
+   Copyright &#xA9; 2022-2023. Anokha - <a href="roshnivenkatesan04.com">Roshni</a><br>
+   II year B.Tech CSE(CYS)</br>
+   Part of 20CYS202 - User Interface Design</br>
+   Amrita Vishwa Vidyapeetham, Coimbatore
+  </p>
 	</div>
 </footer>
 </footer>
