--- a/anokha/html/gallery.html
+++ b/anokha/html/gallery.html
@@ -46,9 +46,12 @@
 
 <footer>
 <div id="term" class="terms">
-  <p>Author: Roshni Venkatesan<br>
-   &#xA9; All Rights Reserved 2022-2023<br>
-  <a href="mailto:hege@example.com">roshnivenkatesan04.com</a></p>
+   <p>
+   Copyright &#xA9; 2022-2023. Anokha - <a href="roshnivenkatesan04.com">Roshni</a><br>
+   II year B.Tech CSE(CYS)</br>
+   Part of 20CYS202 - User Interface Design</br>
+   Amrita Vishwa Vidyapeetham, Coimbatore
+  </p>
   </div>
 </footer>
 </html>
