--- a/mini-project/html/register.html
+++ b/mini-project/html/register.html
@@ -1,26 +1,21 @@
 <!--
 Authors:  Roshni Venkatesan
 Created Date:  28 Dec 2022
-Updated Date: 06 Feb 2023
+Updated Date: 10 Jan 2023
 Base Template:  Customized and Curated from web resources
 Description: University Cycling Mesh - Student Page
-Courtesy:
-		https://www.freepnglogos.com/pics/cyclist
-		https://www.youtube.com/watch?v=qXXknB5bePU
-		https://linktr.ee/ruffautcyclingsystem
-		https://codepen.io/FlorinPop17/pen/xxbdmYz
 -->
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
-	<title>University Cycling Mesh</title>
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="icon" type="image/x-icon" href="images/next-arrow.png">
+	<title>UniCyme |Register</title>
+	<link rel="stylesheet" href="../css/register.css">
+	<link rel="icon" type="image/x-icon" href="../images/next-arrow.png">
 </head>
 <body>
 	<div class="container">
 		<div class="navbar">
-			<img src="images/logo.png" class="logo">
+			<img src="../images/logo.png" class="logo">
 			<nav>
 				<ul>
 					<li><a href="../index.html">Home</a></li>
@@ -30,32 +25,34 @@ Courtesy:
 					<li><a href="../html/faq.html">FAQs</a></li>
 				</ul>
 			</nav>
-			<img src="images/logo1.png" class="university">
+			<img src="../images/logo1.png" class="university">
 		</div>
-
-		<div class="content">
-			
-			<h1>University </br>Cycling Mesh</h1>
-			<p>It's Not just Riding, it's a feeling!</p>
-
-			<div class="arrow-icons">
-				<img src="images/back-arrow.png">
-				<img src="images/next-arrow.png">
-				<a href="" class="btn">Statistics</a>
-			</div>
-
+	</div>
+	<section class="account-container">
+		<div class="account-login">
+			<h2>I have a login</h2>
+			<label class="email">User ID*</label>
+			<input type="" name="" required>
+			<label class="password">Password*</label>
+			<input type="" name="" required>
+			<label class="checkbox"><input type="checkbox" /> Stay Signed in</label>
+			<button>Sign In</button>
 		</div>
- 
-		<img src="images/img.png" class="feature-img">
+		<div class="account-creation">
+			<h2>Creating an account</h2>
+			<p>Creating an account is quick and simple and allows you to track, change or return your order.</p>
+			<button onclick="window.location.href = 'reg.html';">
+				create an account
+			</button>
+		</div>
+	</section>
 
-		<div class="social-links">
+<div class="social-links">
 			<a href="https://open.spotify.com/show/3cVGV68FJ1s8su3rfCUa6B?utm_medium=share&utm_source=linktree">Spotify</a>
 			<a href="https://www.instagram.com/ruffaut.cycling.system/">Instagram</a>
 			<a href="https://www.youtube.com/channel/UCW7AnG4x7RRKJpKUYaw89zQ">Youtube</a>
-		</div>
-
-	</div>
-	<footer>
+</div>
+		<footer>
 	<div id="terms" class="terms">
 		 <p>
    Copyright &#xA9; 2022-2023. UniCyme - <a href="roshnivenkatesan04.com">Roshni</a><br>
