--- a/mini-project/html/whyunicyme.html
+++ b/mini-project/html/whyunicyme.html
@@ -8,7 +8,7 @@ Description: University Cycling Mesh - Student Page
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
-	<title>UniCyme |FAQs</title>
+	<title>UniCyme |Why UniCyme</title>
 	<link rel="stylesheet" href="../css/faq.css">
 	<link rel="icon" type="image/x-icon" href="../images/next-arrow.png">
 </head>
@@ -29,6 +29,27 @@ Description: University Cycling Mesh - Student Page
 		</div>
 	</div></div>
 
+	<div class="content">
+		<left>
+	</br></br>
+		<h2>Our Mission </h2>
+		We promote, educate, and advocate for the safe use of bicycles for transportation — bikes are sustainable, affordable, and fun!
+		<h2>Bit History </h2>
+		Inspired by Cycling systems and benefits to humans and the environment around the world. Passion towards Cycling and love for the environment.
+		<h2>Our Facilities </h2>
+		Fetch Cycles from the decks, and park them in the nearest decks to your destination
+		Participate in the morning and evening cycling community rides
+		<h2>Founder </h2>
+		Roshni V </br>
+		2nd year - B.Tech Student</br>
+		Sustainable Development Enthusiast</br>
+		<h2>Who Is This For </h2>
+		Anybody who wants to be experimental and efficient to time and body.
+		<h2>What We Do </h2>
+		Give people the platform and resources to experiment this system, for a better lifestyle.
+	</left>
+	</div>
+	</br></br></br></br>
 
 	<div class="social-links">
 			<a href="https://open.spotify.com/show/3cVGV68FJ1s8su3rfCUa6B?utm_medium=share&utm_source=linktree">Spotify</a>
