--- a/mini-project/html/howitworks.html
+++ b/mini-project/html/howitworks.html
@@ -8,7 +8,7 @@ Description: University Cycling Mesh - Student Page
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
-	<title>UniCyme |FAQs</title>
+	<title>UniCyme |How We Work</title>
 	<link rel="stylesheet" href="../css/faq.css">
 	<link rel="icon" type="image/x-icon" href="../images/next-arrow.png">
 </head>
@@ -29,7 +29,38 @@ Description: University Cycling Mesh - Student Page
 		</div>
 	</div>
 
-
+	<div class="content">
+		</br></br>
+		<h2>Rules for Users</h2>
+		<pre>
+			1 To access renew your membership.
+			2 Recharge ampount decline should be kept in mind when notified.
+			3 Strictly park Bicycles in the nearsret deck.
+			4 If any damages made/difficulty faced notify to the administration.
+			5 If deck is full, please find the nearest deck. 
+			6 Unattended cycles out of their decks will the traced back to the a ccesor for warning and succesive actions.
+			7 Be kind to the community.
+		</pre>
+		<h2>Rules For Membership</h2>
+		<pre>
+			1 Pay the initial one time deposit. 
+			2 Make sure your balance deposit is maintained.
+			3 If you want to pre book your slot, go to the CMS portal and reserve your ride.
+		</pre>
+		<h2>Events</h2>
+		<pre>
+			1 Summer Campaign - Fundraiser(Social Awareness)
+			2 Winter Campaign - Out of Campus Day Ride
+			3 Special Banner Days( Republic, Independence, Environment Day, etc)
+		</pre> 
+		<h2>Contact</h2>
+		<pre>
+		Roshni V - Admin Incharge
+		cb.en.u4cys21061@cb.students.amrita.edu
+		95******89
+		</pre>
+	</div>
+	</br></br></br></br>
 
 	<div class="social-links">
 			<a href="https://open.spotify.com/show/3cVGV68FJ1s8su3rfCUa6B?utm_medium=share&utm_source=linktree">Spotify</a>
