--- a/mini-project/index.html
+++ b/mini-project/index.html
@@ -23,11 +23,11 @@ Courtesy:
 			<img src="images/logo.png" class="logo">
 			<nav>
 				<ul>
-					<li><a href="../index.html">Home</a></li>
-					<li><a href="../html/whyunicyme.html">Why UniCyme</a></li>
-					<li><a href="../html/howitworks.html">How It Works</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="html/whyunicyme.html">Why UniCyme</a></li>
+					<li><a href="html/howitworks.html">How It Works</a></li>
 					<li><a href="html/register.html">Sign Up!</a></li>
-					<li><a href="../html/faq.html">FAQs</a></li>
+					<li><a href="html/faq.html">FAQs</a></li>
 				</ul>
 			</nav>
 			<img src="images/logo1.png" class="university">
